--- a/public/site.css
+++ b/public/site.css
@@ -24,7 +24,7 @@
 }
 
 #background-progress {
-  width: 0%;
+  width: 100%;
   background-color: #282828;
   height: 100%;
   position: absolute;
@@ -51,4 +51,8 @@
 
 .container .item {
 
+}
+
+.hidden {
+  display: none;
 }
