Changed the display, and fixed minor issues.

--- a/public/site.css
+++ b/public/site.css
@@ -44,8 +44,9 @@
   justify-content: space-around;
   align-items: center;
   color: #D8D8D8;
-  font-size: 5vw;
+  font-size: 10vw;
   font-family: 'Noticia Text', serif;
+  text-align: center;
 }
 
 
@@ -56,3 +57,4 @@
 .hidden {
   display: none;
 }
+
